Small HTML/CSS cleanup

--- a/pmp/static/partials/index.html
+++ b/pmp/static/partials/index.html
@@ -3,7 +3,7 @@
     <h2>
       <strong>Production Monitoring Platform</strong>
     </h2>
-    <h4>Monitor the progress of Monte Carlo and Data Reprocessing requests</h4>
+    <h4>Monitor progress of Monte Carlo and Data Reprocessing requests</h4>
   </div>
 </div>
 <div class="row spacing text-center">
@@ -26,7 +26,7 @@
         <h3>Historical</h3>
       </a>
       <p>
-        View the history of campaigns, requests and workflows
+        View history of campaigns, requests and workflows
       </p>
     </div>
 
@@ -36,22 +36,7 @@
         <h3>Performance</h3>
       </a>
       <p>
-        Check the health of past requests and view time distribution of status transitions and some statistics related to campaign
-      </p>
-    </div>
-
-  </div>
-
-  <div class="col-lg-10 col-lg-offset-1 col-md-10 col-md-offset-1 col-sm-10 col-sm-offset-1 spacing"
-       ng-hide="true">
-
-    <div class="col-lg-offset-4 col-lg-4 col-md-offset-4 col-md-4 col-sm-offset-4 col-sm-4">
-      <a href="chains" ng-click="nav('/chains')">
-        <i class="fa fa-share-alt fa-5x bounceIn animated"></i>
-        <h3>Chains</h3>
-      </a>
-      <p>
-        Get overview of chained campaigns and how they interact
+        Check health of past requests and view time distribution of status transitions
       </p>
     </div>
 
@@ -65,7 +50,7 @@
         <h3>Report</h3>
       </a>
       <p>
-        Anything not working?
+        Something is not working?
       </p>
     </div>
 
@@ -75,7 +60,7 @@
         <h3>About</h3>
       </a>
       <p>
-        Learn more from our TWiki.
+        Learn more about pMp
       </p>
     </div>
 
@@ -84,7 +69,7 @@
 
 <div class="row spacing text-center">
   <h3>
-    <strong>So far we indexed:</strong>
+    <strong>So far we have indexed:</strong>
   </h3>
   <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12" ng-repeat="(key, value) in data">
     <div class="panel panel-default">
