--- a/pmp/templates/valid.html
+++ b/pmp/templates/valid.html
@@ -35,16 +35,18 @@
               <span class="hidden-sm"> Statistics</span>
             </a>
           </li>
-          <li><a href="performance" ng-click="nav('/chains/')" ng-hide="true">
-              <i class="fa fa-share-alt spacing-r"></i>  
-              Chains Landscape</a></li>
-          <li><a href="https://github.com/cms-PdmV/pmp/issues" target="_blank">
+          <li>
+            <a href="https://github.com/cms-PdmV/pmp/issues" target="_blank">
               <i class="fa fa-github spacing-r"></i>
-              Report</a></li>
-          <li><a href="https://twiki.cern.ch/twiki/bin/viewauth/CMS/PdmVpMp"
-                 target="_blank">
+              Report
+            </a>
+          </li>
+          <li>
+            <a href="https://twiki.cern.ch/twiki/bin/viewauth/CMS/PdmVpMp" target="_blank">
               <i class="fa fa-info spacing-r"></i>  
-              About</a></li>
+              About
+            </a>
+          </li>
         </ul>
       </div>
     </nav>
@@ -91,9 +93,6 @@
             <a class="btn btn-default" href="https://www.apple.com/safari/" role="button">
               <img height="20px" src="img/ic_safari.png" /><br/>
               Safari</a>
-            <a class="btn btn-default" href="http://www.opera.com/" role="button">
-              <img height="20px" src="img/ic_opera.png" /><br/>
-              Opera</a>
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-default" data-dismiss="modal">Let me try pMp anyway</button>
