--- a/pmp/static/partials/index.html
+++ b/pmp/static/partials/index.html
@@ -1,7 +1,7 @@
 <div class="row spacing">
   <div class="col-lg-12 text-center">
     <h2>
-      <strong>Production Monitoring Platform</strong>
+      <strong>Production Monitoring Platform<sup style="color: red">2</sup></strong>
     </h2>
     <h4>Monitor progress of Monte Carlo and Data Reprocessing requests</h4>
   </div>
@@ -46,7 +46,7 @@
 
     <div class="col-lg-4 col-lg-offset-2 col-md-4 col-md-offset-2 col-sm-4 col-sm-offset-2">
       <a href="https://github.com/cms-PdmV/pmp/issues" target="_blank">
-        <i class="fa fa-github fa-5x"></i>
+        <i class="fa fa-bug fa-5x"></i>
         <h3>Report</h3>
       </a>
       <p>
