--- a/pmp/templates/invalid.html
+++ b/pmp/templates/invalid.html
@@ -1,3 +1,43 @@
-<h3>You see what happens, Larry?!<br>
-This what happens when you type the url incorrectly!</h3>
-<img src="http://s3.amazonaws.com/s3.roosterteeth.com/images/stevie92466a6628c10c8.jpg">
+<!DOCTYPE html>
+<html lang="en" ng-app="pmpApp" id="ng-app">
+
+  <head>
+    <title>Production Monitoring Platform</title>
+    <base href="/"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+
+    <!--external CSS-->
+    <link href="build/depend.build.css" rel="stylesheet" type="text/css"/>
+    <link href="bower_components/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css"/>
+    <link href="https://fonts.googleapis.com/css?family=Roboto:900,400" rel="stylesheet" type="text/css"/>
+
+    <!--pMp CSS-->
+    <link href="build/pmp.build.css" rel="stylesheet"/>
+
+    <!--external JS-->
+    <script type="text/javascript" src="build/depend.build.js"></script>
+    <script type="text/javascript" src="bower_components/zeroclipboard/dist/ZeroClipboard.min.js"></script>
+
+    <!--pMp JS-->
+    <script type="text/javascript" src="build/directives.pmp.build.js"></script>
+    <script type="text/javascript" src="build/pmp.build.min.js"></script>
+
+    <link rel="shortcut icon" type="image/x-icon" href="img/ic_fav.png" />
+    <style type="text/css">
+      .centered {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  /* bring your own prefixes */
+  transform: translate(-50%, -50%);
+}
+    </style>
+  </head>
+  <body>
+    <div class="centered">
+      <h2>You see what happens, Larry?!</h2>
+      <h3>This what happens when you type the url incorrectly!</h3>
+      <img src="http://s3.amazonaws.com/s3.roosterteeth.com/images/stevie92466a6628c10c8.jpg">
+    </div>
+  </body>
+</html>
