--- a/pmp/static/partials/plot.html
+++ b/pmp/static/partials/plot.html
@@ -3,10 +3,10 @@
   <div class="col-lg-9 col-md-8 col-sm-7 col-xs-12">
    <div class="row">
      <div class="row">
-       <h1 class="pull-right white hidden-xs hidden-sm">
+       <h1 class="pull-right dark-gray hidden-xs hidden-sm">
          <strong>{{page.title}}{{mode}}</strong>
        </h1>
-       <h3 class="pull-right white hidden-md hidden-lg">
+       <h3 class="pull-right dark-gray hidden-md hidden-lg">
          <strong>{{page.title}}{{mode}}</strong>
        </h3>
      </div>
@@ -27,7 +27,7 @@
                  <button type="button" class="btn btn-danger"
                          ng-click="load(campaign, false)" ng-disabled="loadingData">
                    <i class="hidden-lg hidden-md fa fa-eye"></i>
-                   <span class="hidden-sm hidden-xs"> See</span>
+                   <span class="hidden-sm hidden-xs"> Show</span>
                  </button>
                  <button type="button" class="btn btn-danger"
                          ng-click="load(campaign, true, false, true, true)" ng-disabled="loadingData || displayChains">
