--- a/pmp/static/partials/index.html
+++ b/pmp/static/partials/index.html
@@ -69,7 +69,7 @@
 
 <div class="row spacing text-center">
   <h3>
-    <strong>So far we have indexed:</strong>
+    <strong>pMp has information about:</strong>
   </h3>
   <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12" ng-repeat="(key, value) in data">
     <div class="panel panel-default">
