Add multiple prepid search

--- a/pmp/static/partials/plot.html
+++ b/pmp/static/partials/plot.html
@@ -18,8 +18,9 @@
                <input type="text"
                       ng-model="campaign"
                       ng-change="getSuggestions(campaign, page.typeahead)"
-                      typeahead="s as s.label for s in suggestions | filter:$viewValue"
+                      typeahead="s as s.label for s in suggestions"
                       typeahead-template-url="partials/search-suggestion.html"
+                      typeahead-wait-ms=300
                       class="form-control"
                       autocomplete="off"
                       placeholder="Start typing to search...">
@@ -49,7 +50,6 @@
          </div>
        </div>
      </div>
-
      <div class="row" ng-hide="displayChains">
        <div class="panel-default">
          <div class="panel-body">
