Remove multiple prepid search

--- a/pmp/static/partials/index.html
+++ b/pmp/static/partials/index.html
@@ -22,7 +22,7 @@
 
     <div class="col-lg-4 col-md-4 col-sm-4">
       <a href="historical" ng-click="nav('/historical')">
-        <i class="fa fa-line-chart fa-5x bounceIn animated"></i>
+        <i class="fa fa-line-chart fa-5x bounceIn animated" style="animation-delay: 0.1s"></i>
         <h3>Historical</h3>
       </a>
       <p>
@@ -32,7 +32,7 @@
 
     <div class="col-lg-4 col-md-4 col-sm-4">
       <a href="performance" ng-click="nav('/performance')">
-        <i class="fa fa-heartbeat fa-5x bounceIn animated"></i>
+        <i class="fa fa-heartbeat fa-5x bounceIn animated" style="animation-delay: 0.2s"></i>
         <h3>Performance</h3>
       </a>
       <p>
@@ -46,7 +46,7 @@
 
     <div class="col-lg-4 col-lg-offset-2 col-md-4 col-md-offset-2 col-sm-4 col-sm-offset-2">
       <a href="https://github.com/cms-PdmV/pmp/issues" target="_blank">
-        <i class="fa fa-bug fa-5x"></i>
+        <i class="fa fa-bug fa-5x bounceIn animated" style="animation-delay: 0.3s"></i>
         <h3>Report</h3>
       </a>
       <p>
@@ -56,7 +56,7 @@
 
     <div class="col-lg-4 col-md-4 col-sm-4">
       <a href="https://twiki.cern.ch/twiki/bin/viewauth/CMS/PdmVpMp" target="_blank">
-        <i class="fa fa-info fa-5x"></i>
+        <i class="fa fa-info fa-5x bounceIn animated" style="animation-delay: 0.4s"></i>
         <h3>About</h3>
       </a>
       <p>
