--- a/pmp/templates/valid.html
+++ b/pmp/templates/valid.html
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:900,400" rel="stylesheet" type="text/css"/>
 
     <!--pMp CSS-->
-    <link href="build/pmp.build.css" rel="stylesheet"/>
+    <link href="build/pmp.build.min.css" rel="stylesheet" type="text/css"/>
 
     <!--external JS-->
     <script type="text/javascript" src="build/depend.build.js"></script>
