--- a/pmp/static/partials/plot.html
+++ b/pmp/static/partials/plot.html
@@ -18,7 +18,7 @@
                <input type="text"
                       ng-model="campaign"
                       ng-change="getSuggestions(campaign, page.typeahead)"
-                      typeahead="s as s.label for s in suggestions"
+                      typeahead="s as s.label for s in suggestions | filter:$viewValue"
                       typeahead-template-url="partials/search-suggestion.html"
                       typeahead-wait-ms=300
                       class="form-control"
