--- a/pmp/static/partials/search-suggestion.html
+++ b/pmp/static/partials/search-suggestion.html
@@ -1,4 +1,4 @@
 <a>
-  <div style="display: inline-block;" ng-bind-html="match.label | typeaheadHighlight:match.model.query"></div>
+  <div style="display: inline-block;" ng-bind-html="match.label | typeaheadHighlight:query"></div>
   <div style="display: inline-block; font-size: 0.5em;">{{match.model.type}}</div>
 </a>
