Add tags to Submitted API, remove square from main page

--- a/pmp/static/partials/index.html
+++ b/pmp/static/partials/index.html
@@ -1,7 +1,7 @@
 <div class="row spacing">
   <div class="col-lg-12 text-center">
     <h2>
-      <strong>Production Monitoring Platform<sup style="color: red">2</sup></strong>
+      <strong>Production Monitoring Platform</strong>
     </h2>
     <h4>Monitor progress of Monte Carlo and Data Reprocessing requests</h4>
   </div>
