Copy changes from production pMp, increase result window size

--- a/pmp/static/partials/historical.html
+++ b/pmp/static/partials/historical.html
@@ -14,7 +14,7 @@
       </div>
       <div class="col-lg-9 col-md-9 col-sm-9">
         <div class="progress">
-          <div class="{{getSubmittedProgressClass(value['completion'])}}" role="progressbar" aria-valuenow="{{getSubmittedProgressWidth(value['completion'])}}" aria-valuemin="0" aria-valuemax="100" style="width: {{getSubmittedProgressWidth(value['completion'])}}%;">
+          <div class="{{getSubmittedProgressClass(value['completion'])}} font-shadow" role="progressbar" aria-valuenow="{{getSubmittedProgressWidth(value['completion'])}}" aria-valuemin="0" aria-valuemax="100" style="width: {{getSubmittedProgressWidth(value['completion'])}}%;">
             {{getSubmittedProgressLabel(value['completion'])}}
           </div>
         </div>
