--- a/pmp/static/partials/historical.html
+++ b/pmp/static/partials/historical.html
@@ -2,30 +2,65 @@
   <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 text-center spacing" id="measure">
     <linear-lifetime chart-data="data" task-chain="loadTaskChain" zoom-y="zoomOnY"
                      human-readable-numbers="humanReadableNumbers" class="spacing"></linear-lifetime>
-    <p ng-hide="isEmpty(listSubmitted)">
-      List of requests on status submitted:
+    <p ng-hide="listSubmitted.length == 0" class="margin-20">
+      List of requests (<b>{{listSubmitted.length}}</b>) in status <b>submitted</b>:
     </p>
-    <div ng-repeat="(prepid, value) in listSubmitted" class="zebra-lines small-padding">
-      <div class="col-lg-3 col-md-3 col-sm-3">
-        <small>
-          <a ng-if="prepid.indexOf('ReReco') == -1" ng-href="/mcm/requests?prepid={{prepid}}" target="_blank">{{prepid}}</a>
-          <a ng-if="prepid.indexOf('ReReco') != -1" ng-href="https://dmytro.web.cern.ch/dmytro/cmsprodmon/workflows.php?prep_id={{prepid}}" target="_blank">{{prepid}}</a>
-        </small>
+    <div ng-repeat="submitted in listSubmitted" class="row zebra-lines small-padding">
+      <div class="col-sm-4">
+        <a ng-if="submitted.request.indexOf('ReReco') == -1" ng-href="https://cms-pdmv.cern.ch/mcm/requests?prepid={{submitted.request}}" target="_blank">{{submitted.request}}</a>
+        <a ng-if="submitted.request.indexOf('ReReco') != -1" ng-href="https://dmytro.web.cern.ch/dmytro/cmsprodmon/workflows.php?prep_id={{submitted.request}}" target="_blank">{{submitted.request}}</a>
       </div>
-      <div class="col-lg-9 col-md-9 col-sm-9">
-        <div class="progress">
-          <div class="{{getSubmittedProgressClass(value['completion'])}} font-shadow" role="progressbar" aria-valuenow="{{getSubmittedProgressWidth(value['completion'])}}" aria-valuemin="0" aria-valuemax="100" style="width: {{getSubmittedProgressWidth(value['completion'])}}%;">
-            {{getSubmittedProgressLabel(value['completion'])}}
+      <div class="col-sm-2">
+        Expected: <b>{{submitted.expected}}</b>
+      </div>
+      <div class="col-sm-2">
+        Produced: <b>{{submitted.done}}</b>
+      </div>
+      <div class="col-sm-2">
+        <div class="progress" style="width:100%; background-color:rgba(39, 174, 96, 0.2); display: inline-block; margin: 0 4px -5px 4px;">
+          <div class="font-shadow progress-bar"
+               role="progressbar"
+               aria-valuemin="0"
+               aria-valuemax="100"
+               style="max-width: 100%;
+                      width:{{submitted.done / submitted.expected * 100}}%;">
+            {{submitted.done / submitted.expected * 100 | number : 1}}%
           </div>
         </div>
       </div>
-      <div class="row">
-        <div>
-          {{value['datasets'][0].substring(0, value['datasets'][0].lastIndexOf("/")+1)}}
-          <a ng-repeat="dataset in value['datasets']" ng-href="https://cmsweb.cern.ch/das/request?view=list&limit=50&instance=prod/global&input=dataset={{dataset}}" target="_blank">
-            {{dataset.split("/")[dataset.split("/").length-1]}};
-          </a>
+      <div class="col-sm-2">
+        <a ng-if="submitted.dataset" ng-href="https://cmsweb.cern.ch/das/request?view=list&limit=50&instance=prod/global&input=dataset={{submitted.dataset}}" target="_blank">Dataset in DAS</a>
+      </div>
+    </div>
+
+    <p ng-hide="listDone.length == 0" class="margin-20">
+      List of requests (<b>{{listDone.length}}</b>) in status <b>done</b>:
+    </p>
+    <div ng-repeat="done in listDone" class="row zebra-lines small-padding">
+      <div class="col-sm-4">
+        <a ng-if="done.request.indexOf('ReReco') == -1" ng-href="https://cms-pdmv.cern.ch/mcm/requests?prepid={{done.request}}" target="_blank">{{done.request}}</a>
+        <a ng-if="done.request.indexOf('ReReco') != -1" ng-href="https://dmytro.web.cern.ch/dmytro/cmsprodmon/workflows.php?prep_id={{done.request}}" target="_blank">{{done.request}}</a>
+      </div>
+      <div class="col-sm-2">
+        Expected: <b>{{done.expected}}</b>
+      </div>
+      <div class="col-sm-2">
+        Done: <b>{{done.done}}</b>
+      </div>
+      <div class="col-sm-2">
+        <div class="progress" style="width:100%; background-color:rgba(231, 76, 60, 0.7); display: inline-block; margin: 0 4px -5px 4px;">
+          <div class="font-shadow progress-bar"
+               role="progressbar"
+               aria-valuemin="0"
+               aria-valuemax="100"
+               style="max-width: 100%;
+                      width:{{done.done / done.expected * 100}}%;">
+            {{done.done / done.expected * 100 | number : 1}}%
+          </div>
         </div>
+      </div>
+      <div class="col-sm-2">
+        <a ng-if="done.dataset" ng-href="https://cmsweb.cern.ch/das/request?view=list&limit=50&instance=prod/global&input=dataset={{done.dataset}}" target="_blank">Dataset in DAS</a>
       </div>
     </div>
   </div>
