--- a/pmp/static/partials/index.html
+++ b/pmp/static/partials/index.html
@@ -1,7 +1,7 @@
 <div class="row spacing">
   <div class="col-lg-12 text-center">
     <h2>
-      <strong>Production Monitoring Platform</strong>
+      <strong>Production Monitoring Platform <span style="color:red;">Second Edition</span></strong>
     </h2>
     <h4>Monitor progress of Monte Carlo and Data Reprocessing requests</h4>
   </div>
@@ -69,16 +69,15 @@
 
 <div class="row spacing text-center">
   <h3>
-    <strong>pMp has information about:</strong>
+    <strong>pMp database is:</strong>
   </h3>
   <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12" ng-repeat="(key, value) in data">
     <div class="panel panel-default">
       <div class="panel-heading">
         <h1>{{value}}</h1>
       </div>
-      <br/>
       <div class="panel-body">
-        <small class="text-uppercase">{{key}}</small>
+        <span class="text-uppercase">{{key}}</span>
       </div>
     </div>
   </div>
