--- a/pmp/static/partials/index.html
+++ b/pmp/static/partials/index.html
@@ -6,13 +6,12 @@
     <h4>Monitor progress of Monte Carlo and Data Reprocessing requests</h4>
   </div>
 </div>
-<div class="row spacing text-center">
+<div class="spacing text-center">
   <hr class="line"/>
-  <div class="col-lg-10 col-lg-offset-1 col-md-10 col-md-offset-1 col-sm-10 col-sm-offset-1 spacing">
-
+  <div class="row spacing">
     <div class="col-lg-4 col-md-4 col-sm-4">
       <a href="present" ng-click="nav('/present')">
-        <i class="fa fa-bar-chart fa-5x bounceIn animated"></i>
+        <i class="fa fa-chart-bar fa-5x bounceIn animated"></i>
         <h3>Present</h3>
       </a>
       <p>
@@ -22,7 +21,7 @@
 
     <div class="col-lg-4 col-md-4 col-sm-4">
       <a href="historical" ng-click="nav('/historical')">
-        <i class="fa fa-line-chart fa-5x bounceIn animated" style="animation-delay: 0.1s"></i>
+        <i class="fa fa-chart-line fa-5x bounceIn animated" style="animation-delay: 0.1s"></i>
         <h3>Historical</h3>
       </a>
       <p>
@@ -42,9 +41,9 @@
 
   </div>
 
-  <div class="col-lg-10 col-lg-offset-1 col-md-10 col-md-offset-1 col-sm-10 col-sm-offset-1">
-
-    <div class="col-lg-4 col-lg-offset-2 col-md-4 col-md-offset-2 col-sm-4 col-sm-offset-2">
+  <div class="row">
+    <div class="col-lg-2 col-md-2 col-sm-2"></div>
+    <div class="col-lg-4 col-md-4 col-sm-4">
       <a href="https://github.com/cms-PdmV/pmp/issues" target="_blank">
         <i class="fa fa-bug fa-5x bounceIn animated" style="animation-delay: 0.3s"></i>
         <h3>Report</h3>
@@ -67,17 +66,21 @@
   </div>
 </div>
 
-<div class="row spacing text-center">
-  <h3>
-    <strong>pMp database is:</strong>
-  </h3>
-  <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12" ng-repeat="(key, value) in data">
-    <div class="panel panel-default">
-      <div class="panel-heading">
-        <h1>{{value}}</h1>
-      </div>
-      <div class="panel-body">
-        <span class="text-uppercase">{{key}}</span>
+<div class="spacing text-center">
+  <div class="row spacing text-center">
+    <h3>
+      <strong>pMp database is:</strong>
+    </h3>
+  </div>
+  <div class="row spacing">
+    <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12" ng-repeat="(key, value) in data">
+      <div class="panel panel-default">
+        <div class="panel-heading">
+          <h1>{{value}}</h1>
+        </div>
+        <div class="panel-body">
+          <span class="text-uppercase">{{key}}</span>
+        </div>
       </div>
     </div>
   </div>
