--- a/pmp/static/partials/plot.html
+++ b/pmp/static/partials/plot.html
@@ -1,89 +1,83 @@
-<div class="row" ng-show="showView"></div>
-<!--<div class="full" ng-show="loadingData"></div>-->
-  <div class="col-lg-9 col-md-8 col-sm-7 col-xs-12">
-   <div class="row">
-     <div class="row">
-       <h1 class="pull-right dark-gray hidden-xs hidden-sm">
+<div>
+  <div class="row">
+    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+       <h1 class="pull-right dark-gray d-none d-md-block">
          <strong>{{page.title}}{{mode}}</strong>
        </h1>
-       <h3 class="pull-right dark-gray hidden-md hidden-lg">
+       <h3 class="pull-right dark-gray d-md-none">
          <strong>{{page.title}}{{mode}}</strong>
        </h3>
-     </div>
-     <div class="row">
-       <div class="well">
-         <div class="row">
-           <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" ng-controller="TypeaheadController" ng-init="initSuggestions()">
-             <div class="input-group spacing">
-               <input type="text"
-                      ng-model="campaign"
-                      ng-change="getSuggestions(campaign, page.typeahead)"
-                      typeahead="s as s.label for s in suggestions | filter:$viewValue"
-                      typeahead-template-url="partials/search-suggestion.html"
-                      typeahead-wait-ms=300
-                      class="form-control"
-                      autocomplete="off"
-                      placeholder="Start typing to search...">
-               <span class="input-group-btn">
-                 <button type="button" class="btn btn-danger"
-                         ng-click="load(campaign, false)" ng-disabled="loadingData">
-                   <i class="hidden-lg hidden-md fa fa-eye"></i>
-                   <span class="hidden-sm hidden-xs"> Show</span>
-                 </button>
-                 <button type="button" class="btn btn-danger"
-                         ng-click="load(campaign, true, false, true, true)" ng-disabled="loadingData || displayChains">
-                   <i class="hidden-lg hidden-md fa fa-plus"></i>
-                   <span class="hidden-sm hidden-xs"> Append</span>
-                 </button>
-                 <button type="button" class="btn btn-danger" ng-click="load('all')"
-                         ng-disabled="loadingData || displayChains || page.id == 2">
-                   <i class="hidden-lg hidden-md fa fa-globe"></i>
-                   <span class="hidden-sm hidden-xs"> Load <strong>all</strong></span>
-                 </button>
-               </span>
-             </div>
-           </div>
-           <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" ng-show="loadingData">
-             <i class="fa fa-spinner fa-spin fa-1x"></i>
-             <small> Loading...</small>
-           </div>
-         </div>
-       </div>
-     </div>
-     <div class="row" ng-hide="displayChains">
-       <div class="panel-default">
-         <div class="panel-body">
-           <input-tags style="padding-bottom: 0px;"></input-tags>
-         </div>
-       </div>
-     </div>
-     
-     <div class="row">
-       <div class="panel" ng-show="showDate">
-         <div class="panel-body">
-           Last update: {{lastUpdate | date:"d MMMM y H:mm 'UTC'Z"}}
-         </div>
-       </div>
-     </div>
-   </div>
+    </div>
   </div>
-
-  <div class="col-lg-3 col-md-4 col-sm-5 col-xs-12">
-    <a class="btn btn-sm text-uppercase padding-r" data-toggle="collapse" data-target="#filter">
-      <i class="fa fa-eyedropper"></i>
-      <small> Filter</small>
-    </a>
-    <a class="btn btn-sm text-uppercase padding-r" data-toggle="collapse" data-target="#advanced">
-      <i class="fa fa-cog"></i>
-      <small> Advanced</small>
-    </a>
-    <a class="btn btn-sm text-uppercase hidden-xs" data-toggle="collapse" data-target="#share">
-      <i class="fa fa-share"></i>
-      <small> Share</small>
-    </a>
-    <div ng-include="'build/filter.min.html'"></div>
-    <div ng-include="'build/advanced.min.html'"></div>
-    <div ng-include="'build/share.min.html'"></div>
+  <div class="row">
+    <div class="col-lg-9 col-md-9 col-sm-9 col-xs-9" ng-controller="TypeaheadController" ng-init="initSuggestions()">
+      <div class="row">
+        <div class="input-group">
+          <input type="text"
+                 ng-model="campaign"
+                 ng-change="getSuggestions(campaign, page.typeahead)"
+                 typeahead="s as s.label for s in suggestions | filter:$viewValue"
+                 typeahead-template-url="partials/search-suggestion.html"
+                 typeahead-wait-ms=300
+                 class="form-control"
+                 autocomplete="off"
+                 placeholder="Start typing to search...">
+          <div class="input-group-append">
+            <button type="button"
+                    class="btn btn-danger"
+                    ng-click="load(campaign, false)"
+                    ng-disabled="loadingData">
+              <i class="hidden-lg hidden-md fa fa-eye"></i>
+              <span class="hidden-sm hidden-xs"> Show</span>
+            </button>
+            <button type="button"
+                    class="btn btn-danger"
+                    ng-click="load(campaign, true, false, true, true)"
+                    ng-disabled="loadingData || displayChains">
+              <i class="hidden-lg hidden-md fa fa-plus"></i>
+              <span class="hidden-sm hidden-xs"> Append</span>
+            </button>
+            <button type="button"
+                    class="btn btn-danger"
+                    ng-click="load('all')"
+                    ng-disabled="loadingData || displayChains || page.id == 2">
+              <i class="hidden-lg hidden-md fa fa-globe"></i>
+              <span class="hidden-sm hidden-xs"> Load <strong>all</strong></span>
+            </button>
+          </div>
+        </div>
+      </div>
+      <div class="row mt-2" ng-show="loadingData" >
+          <i class="fa fa-spinner fa-spin fa-1x mr-1"></i><small> Loading...</small>
+      </div>
+      <div class="row mt-2" ng-hide="displayChains">
+        <input-tags style="padding-bottom: 0px;"></input-tags> 
+      </div> 
+    </div>
+    <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
+      <a class="btn btn-sm text-uppercase padding-r" data-toggle="collapse" data-target="#filter">
+        <i class="fa fa-eyedropper"></i>
+        <small> Filter</small>
+      </a>
+      <a class="btn btn-sm text-uppercase padding-r" data-toggle="collapse" data-target="#advanced">
+        <i class="fa fa-cog"></i>
+        <small> Advanced</small>
+      </a>
+      <a class="btn btn-sm text-uppercase hidden-xs" data-toggle="collapse" data-target="#share">
+        <i class="fa fa-share"></i>
+        <small> Share</small>
+      </a>
+      <div ng-include="'build/filter.min.html'"></div>
+      <div ng-include="'build/advanced.min.html'"></div>
+      <div ng-include="'build/share.min.html'"></div>
+    </div>
+  </div>
+  <div class="row mt-2">
+    <div class="panel" ng-show="showDate">
+      <div class="panel-body">
+        Last update: {{lastUpdate | date:"d MMMM y H:mm 'UTC'Z"}}
+      </div>
+    </div>
   </div>
 </div>
 
