--- a/pmp/templates/valid.html
+++ b/pmp/templates/valid.html
@@ -8,8 +8,8 @@
 
     <!--external CSS-->
     <link href="build/depend.build.css" rel="stylesheet" type="text/css"/>
-    <link href="bower_components/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css"/>
-    <link href="https://fonts.googleapis.com/css?family=Roboto:900,400" rel="stylesheet" type="text/css"/>
+    <link href="bower_components/font-awesome/web-fonts-with-css/css/fontawesome-all.min.css" rel="stylesheet" type="text/css"/>
+    <link href="https://fonts.googleapis.com/css?family=Roboto:900,400,300" rel="stylesheet" type="text/css"/>
 
     <!--pMp CSS-->
     <link href="build/pmp.build.min.css" rel="stylesheet" type="text/css"/>
@@ -26,54 +26,48 @@
   </head>
   <body ng-controller="MainController">
 
-    <nav class="navbar navbar-inverse" role="navigation">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark" role="navigation">
       <div class="container-fluid">
-        <a href="index" ng-click="nav('/index/')">
+        <a href="index" class="navbar-brand" ng-click="nav('/index/')">
           <img src="img/ic_fav.png" class="brand-adjust" alt="PMP"/>
         </a>
-        <div class="navbar-header">
-            <button type="button" data-target="#navbarCollapse" data-toggle="collapse" class="navbar-toggle">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item active">
+              <a class="nav-link" href="present" ng-click="nav('/present/')">
+                <i class="fa fa-chart-bar spacing-r"></i>
+                Present Staistics
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="historical" ng-click="nav('/historical/')"">
+                <i class="fa fa-chart-line spacing-r"></i>
+                Historical Statistics
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="performance" ng-click="nav('/performance/')">
+                <i class="fa fa-heartbeat spacing-r"></i>
+                Performance Statistics
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="https://github.com/cms-PdmV/pmp/issues" target="_blank">
+                <i class="fa fa-bug spacing-r"></i>
+                Report
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="https://twiki.cern.ch/twiki/bin/viewauth/CMS/PdmVpMp" target="_blank">
+                <i class="fa fa-info spacing-r"></i>
+                About
+              </a>
+            </li>
+          </ul>
         </div>
-        <ul id="navbarCollapse" class="collapse navbar-collapse nav navbar-header navbar-nav col-xs-12 col-sm-12 col-md-12 col-lg-12">
-          <li>
-            <a href="present" ng-click="nav('/present/')">
-              <i class="fa fa-bar-chart spacing-r"></i>
-              Present
-              <span class="hidden-sm"> Statistics</span>
-            </a>
-          </li>
-          <li>
-            <a href="historical" ng-click="nav('/historical/')">
-              <i class="fa fa-line-chart spacing-r"></i>
-              Historical
-              <span class="hidden-sm"> Statistics</span>
-            </a>
-          </li>
-          <li>
-            <a href="performance" ng-click="nav('/performance/')">
-              <i class="fa fa-heartbeat spacing-r"></i>
-              Performance
-              <span class="hidden-sm"> Statistics</span>
-            </a>
-          </li>
-          <li>
-            <a href="https://github.com/cms-PdmV/pmp/issues" target="_blank">
-              <i class="fa fa-bug spacing-r"></i>
-              Report
-            </a>
-          </li>
-          <li>
-            <a href="https://twiki.cern.ch/twiki/bin/viewauth/CMS/PdmVpMp" target="_blank">
-              <i class="fa fa-info spacing-r"></i>  
-              About
-            </a>
-          </li>
-        </ul>
       </div>
     </nav>
 
