--- a/pmp/static/css/pmp.css
+++ b/pmp/static/css/pmp.css
@@ -222,10 +222,10 @@ h1.dark-gray,h3.dark-gray {
     margin: 0 4px -5px 4px;
 }
 
-.produced-bar {
+.pmp-orange {
     background-color: #f4bc91;
 }
 
-.done-bar {
+.pmp-blue {
     background-color: #8eb2cf;
 }
