--- a/pmp/static/partials/historical.html
+++ b/pmp/static/partials/historical.html
@@ -20,7 +20,7 @@
       </div>
       <div class="col-sm-2">
         <div class="progress total-bar">
-          <div class="font-shadow progress-bar produced-bar"
+          <div class="font-shadow progress-bar pmp-orange"
                role="progressbar"
                aria-valuemin="0"
                aria-valuemax="100"
@@ -51,7 +51,7 @@
       </div>
       <div class="col-sm-2">
         <div class="progress total-bar">
-          <div class="font-shadow progress-bar done-bar"
+          <div class="font-shadow progress-bar pmp-blue"
                role="progressbar"
                aria-valuemin="0"
                aria-valuemax="100"
