--- a/pmp/static/partials/filter.html
+++ b/pmp/static/partials/filter.html
@@ -1,4 +1,7 @@
-<div id="filter" class="collapse col-xs-12 col-sm-12 col-md-12 col-lg-12 spacing" ng-controller="FilterController" ng-init="initFilter();init()">
+<div id="filter"
+     class="collapse col-xs-12 col-sm-12 col-md-12 col-lg-12 spacing pl-0 pr-0"
+     ng-controller="FilterController"
+     ng-init="initFilter();init()">
   <div ng-show="isEmpty(statusFilter)">
     <small>
       No data to filter
@@ -10,21 +13,52 @@
         Priority filter
       </small>
       <div class="input-group col-sm-12">
-        <select class="form-control text-center" ng-change="applyFilterChanges(page.id == 2)" ng-disabled="loadingData" ng-model="priorityFilter[0]">
-          <option ng-repeat="(key, value) in priorityPerBlock" value="{{value}}">
-            {{key}}
-          </option>
-        </select>
-        <input type="text" class="form-control" placeholder="min" ng-change="applyFilterChanges(page.id == 2)" ng-disabled="loadingData" ng-model="priorityFilter[0]">
-        <div class="input-group-addon">
-            &le;x&le;
+        <div class="row">
+          <div class="col-sm-12 col-lg-5 pr-0">
+            <select class="form-control text-center"
+                    style="width: 100%" 
+                    ng-change="applyFilterChanges()"
+                    ng-disabled="loadingData"
+                    ng-model="priorityFilter[0]">
+              <option ng-repeat="(key, value) in priorityPerBlock"
+                      value="{{value}}">
+                {{key}} ({{value / 1000}}k)
+              </option>
+            </select>
+            <input type="text"
+                   class="form-control"
+                   style="width: 100%" 
+                   placeholder="min"
+                   ng-change="applyFilterChanges()"
+                   ng-model-options="{ debounce: 1500 }"
+                   ng-disabled="loadingData"
+                   ng-model="priorityFilter[0]">
+          </div>
+          <div class="col-sm-12 col-lg-2 pl-0 pr-0 input-group-addon"
+               style="display: flex; align-items: center; justify-content: center;">
+              &le;x&le;
+          </div>
+          <div class="col-sm-12 col-lg-5 pl-0">
+            <select class="form-control text-center"
+                    style="width: 100%" 
+                    ng-change="applyFilterChanges()"
+                    ng-disabled="loadingData" 
+                    ng-model="priorityFilter[1]">
+              <option ng-repeat="(key, value) in priorityPerBlock"
+                      value="{{value}}">
+                {{key}} ({{value / 1000}}k)
+              </option>
+            </select>
+            <input type="text"
+                   class="form-control"
+                   style="width: 100%" 
+                   placeholder="max"
+                   ng-change="applyFilterChanges()"
+                   ng-model-options="{ debounce: 1500 }"
+                   ng-disabled="loadingData"
+                   ng-model="priorityFilter[1]">
+          </div>
         </div>
-        <select class="form-control text-center" ng-change="applyFilterChanges(page.id == 2)" ng-disabled="loadingData" ng-model="priorityFilter[1]">
-          <option ng-repeat="(key, value) in priorityPerBlock" value="{{value}}">
-            {{key}}
-          </option>
-        </select>
-        <input type="text" class="form-control" placeholder="max" ng-change="applyFilterChanges(page.id == 2)" ng-disabled="loadingData" ng-model="priorityFilter[1]">
       </div>
     </form>
     <form class="form-group form-inline form-group-sm spacing">
