--- a/pmp/templates/valid.html
+++ b/pmp/templates/valid.html
@@ -40,7 +40,7 @@
             <li class="nav-item active">
               <a class="nav-link" href="present" ng-click="nav('/present/')">
                 <i class="fa fa-chart-bar spacing-r"></i>
-                Present Staistics
+                Present Statistics
               </a>
             </li>
             <li class="nav-item">
