--- a/pmp/static/partials/present.html
+++ b/pmp/static/partials/present.html
@@ -42,7 +42,7 @@
         Status: <b>{{binEntry.status}}</b>
       </div>
       <div class="col-sm-2">
-        PWG: <b>{{binEntry.pwg}}</b>
+        Member of chains: <b>{{binEntry.member_of_chain.length}}</b>
       </div>
     </div>
   </div>
